@startuml class
class Candidat {
    - int num_table
    - string prenom
    - string nom
    - date date_naissance
    - string lieu_naissance
    - char sexe
    - string nationalite
    - bool choix_epr_facultative
    - string epreuve_facultative
    - bool aptitude_sportive
}

class LivretScolaire {
    - int nombre_de_fois
    - float moyenne_6e
    - float moyenne_5e
    - float moyenne_4e
    - float moyenne_3e
    - float moyenne_cycle
}

class Notes {
    - float compo_franc
    - float dictee
    - float etude_de_texte
    - float instruction_civique
    - float histoire_geo
    - float mathematiques
    - float pc_lv2
    - float svt
    - float anglais_ecrit
    - float anglais_oral
    - float eps
    - float epreuve_facultative
}

class Jury {
    - string ia_region
    - string ief_departement
    - string localite
    - string centre_examen
    - string president_jury_jury
    - string telephone
}

class Deliberation {
    - int total_points
    - string statut
    + calculerResultat()
}

Candidat "1" -- "1" LivretScolaire
Candidat "1" -- "1" Notes
Jury "1" -- "0..*" Candidat
Candidat "1" -- "1" Deliberation
@enduml
